--- a/test/app/post/show.html.ejs
+++ b/test/app/post/show.html.ejs
@@ -1,1 +1,17 @@
-You are looking at the wonderful: <%= captured.id %>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+  <title>Show Post</title>
+  
+</head>
+
+<body>
+  <p>You are looking at the wonderful: <%= captured.id %></p>
+  
+  <p>Yay!</p>
+</body>
+</html>
