Got annoyed that I wasn't using a full HTML doc in the template of the sample app.

--- a/test/app/posts/all.html.ejs
+++ b/test/app/posts/all.html.ejs
@@ -1,3 +1,11 @@
-This is all posts.
+<html>
+  <head>
+    <title>All Posts</title>
+  </head>
+  
+  <body>
+    <p>This is all posts.</p>
 
-<%= foo %>
+    <%= foo %>
+  </body>
+</html>
